--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,9 @@
 body {
-  background: red;
+  background: rgb(226, 222, 206);
 }
 
-h1 {
-  color: white;
+h1,
+p {
+  color: rgb(71, 66, 64);
+  text-align: center;
 }
