--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 body {
   background: rgb(226, 222, 206);
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 h1,
@@ -14,4 +15,17 @@ p {
 
 .gallery-image {
   margin: 20px auto;
+}
+
+.navigation a {
+  color: black;
+  text-decoration: none;
+  padding: 10px 20px;
+  border: rgb(240, 234, 234) solid 1px;
+  border-radius: 0 0 5px 5px;
+}
+
+a:hover {
+  color: rgb(71, 66, 64);
+  border: white solid 1px;
 }
