--- a/src/styles.css
+++ b/src/styles.css
@@ -9,12 +9,13 @@ p {
   text-align: center;
 }
 
-.intro {
-  font-size: 24px;
+h1 {
+  font-size: 50px;
+  margin-top: 20px;
 }
 
-.hero-image {
-  margin: 20px 0;
+.intro {
+  font-size: 24px;
 }
 
 .gallery-image {
@@ -48,7 +49,11 @@ p {
 }
 
 @media (max-width: 800px) {
-  p {
+  h1 {
+    font-size: 36px;
+  }
+
+  p.intro {
     font-size: 14px;
   }
 }
